Fix loading symbol spacing

--- a/src/components/FunFactPanel/FunFactPanel.module.scss
+++ b/src/components/FunFactPanel/FunFactPanel.module.scss
@@ -1,6 +1,8 @@
 .funFactPanel {
     @include flex-center;
 
+    height: 100%;
+
     .fact {
         letter-spacing: 1px;
         z-index: 1;
