--- a/src/components/SpotifyPanel/SpotifyPanel.module.scss
+++ b/src/components/SpotifyPanel/SpotifyPanel.module.scss
@@ -2,7 +2,7 @@
     --album-size: 3rem;
     --link-size: 2rem;
     --top-spacing: 2.5rem;
-    --max-lines: 1;
+    --max-lines: 2;
 
     align-items: center;
     display: flex;
